# tkd-scoreboard

./: .gitignore  Cargo.toml  README.md
.github/workflows/: build&deploy.yml  rust.yml
src/: lib.rs  main.rs
src/common/: labels.rs  mod.rs
src/constants/: mod.rs
src/contest_winner/: buttons.rs  labels.rs  mod.rs
src/controls/: buttons.rs  mod.rs
src/data/: groups.rs  mod.rs
src/display/: labels.rs  mod.rs
src/end_contest/: buttons.rs  labels.rs  mod.rs
src/enums/: mod.rs
src/medical_timeout/: buttons.rs  labels.rs  mod.rs
src/screen/: labels.rs  mod.rs
src/settings/: buttons.rs  inputs.rs  labels.rs  mod.rs
src/superiority_decision/: buttons.rs  labels.rs  mod.rs
