[package]
name = "tkd-scoreboard"
version = "2.0.0"
edition = "2021"
authors = ["irzinfante <contact@irzinfante.eu>"]
repository = "https://github.com/irzinfante/tkd-scoreboard/"
license = "GPL-3.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fltk = { version = "^1.2", features = ["fltk-bundled"] }
