[package]
name = "tkd-scoreboard"
version = "3.0.0"
edition = "2021"
authors = ["irzinfante <iker@irzinfante.eu>"]
repository = "https://github.com/irzinfante/tkd-scoreboard/"
license = "GPL-3.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fltk = { version = "^1.2", features = ["fltk-bundled"] }
chrono = { version = "0.2.16" }
directories = { version = "4.0.1" }
cacache = { version = "11.3.0" }
