[package]
name = "tkd-scoreboard"
version = "3.0.1"
edition = "2021"
authors = ["irzinfante <iker@irzinfante.dev>"]
repository = "https://github.com/irzinfante/tkd-scoreboard/"
license = "GPL-3.0"
rust-version = "1.73.0"

[dependencies]
fltk = { version = "^1.2", features = ["fltk-bundled"] }
chrono = { version = "0.2.16" }
directories = { version = "4.0.1" }
cacache = { version = "11.3.0" }
